--- a/trunk/datapack_development/data/html/admin/mods_menu.htm
+++ b/trunk/datapack_development/data/html/admin/mods_menu.htm
@@ -1,6 +1,6 @@
-<html><title>L2J Mods Panel</title><body><br>
+<html><title>L2J Mods Panel</title><body>
 <center>
-<table width=260>
+<table width=270 border=0 bgcolor="666666">
 <tr>
 <td><button value="Main" action="bypass -h admin_admin" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Game" action="bypass -h admin_admin2" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
@@ -8,13 +8,17 @@
 <td><button value="Server" action="bypass -h admin_admin4" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Mods" action="bypass -h admin_admin5" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
-</table><br>
+</table>
+<br>
 <table width=240>
 <tr>
 <td>QuickBox:</td>
 <td><edit var="qbox" width=120 height=15></td>
-<td><button value="Help" action="bypass -h admin_help help/mods_menu.htm" width=45 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr></table><br>Wedding:
+<td><button value="Help" action="bypass -h admin_help help/mods_menu.htm" width=45 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+</table>
+<br>
+Wedding:
 <font color="LEVEL"><a action="bypass -h admin_help help/l2jmod/wedding.htm">Help</a></font>
 <table width=240><tr>
 <td><button value="Enable" action="bypass -h admin_set_mod AllowWedding=true" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
@@ -65,5 +69,5 @@
 </tr></table>
 <br><br>
 </center>
-Server Software: running L2J created by L2Chef and the L2J team. l2jserver.com for details
+Server Software: Running L2J created by L2Chef and the L2J team. www.l2jserver.com for details.
 </body></html>
