--- a/trunk/datapack_development/data/html/admin/server_menu.htm
+++ b/trunk/datapack_development/data/html/admin/server_menu.htm
@@ -1,6 +1,6 @@
-<html><title>L2J Server Management</title><body><br>
+<html><title>L2J Server Management Panel</title><body>
 <center>
-<table width=260>
+<table width=270 border=0 bgcolor="666666">
 <tr>
 <td><button value="Main" action="bypass -h admin_admin" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Game" action="bypass -h admin_admin2" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
@@ -10,12 +10,16 @@
 </tr>
 </table>
 <br>
-<table width=240><tr>
-<td>QuickBox:</td><td><edit var="qbox" width=120 height=15></td>
+
+<table width=240>
+<tr>
+<td>QuickBox:</td>
+<td><edit var="qbox" width=120 height=15></td>
 <td><button value="Help" action="bypass -h admin_help help/server_menu.htm" width=45 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
 <br>
+
 Development:
 <table width=240>
 <tr>
@@ -66,7 +70,7 @@ File Reloading:<br1>
 <td><button value="Announcements" action="bypass -h admin_announce_announcements" width=125 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 <tr>
-<td><button value="Cursed Weapons" action="bypass -h admin_cw_reload" width=125 height=22 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Cursed Weapons" action="bypass -h admin_cw_reload" width=125 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
 <br><br>
@@ -92,5 +96,5 @@ Maintenance:
 </table>
 </center>
 <br>
-Server Software: L2J created by L2Chef and the L2J team. Visit www.l2jserver.com for details.
+Server Software: Running L2J created by L2Chef and the L2J team. www.l2jserver.com for details.
 </body></html>
