--- a/trunk/datapack_development/data/html/admin/main_menu.htm
+++ b/trunk/datapack_development/data/html/admin/main_menu.htm
@@ -1,14 +1,23 @@
 <html><title>L2J Main Admin Menu</title><body>
-<center><table width=260><tr>
+<center>
+<table width=270 border=0 bgcolor="666666">
+<tr>
 <td><button value="Main" action="bypass -h admin_admin" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Game" action="bypass -h admin_admin2" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Effects" action="bypass -h admin_admin3" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Server" action="bypass -h admin_admin4" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Mods" action="bypass -h admin_admin5" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr></table><br>
-<table width=240><tr>
-<td>QuickBox:</td><td><edit var="qbox" width=120 height=15></td><td><button value="Help" action="bypass -h admin_help help/main_menu.htm" width=45 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr></table><br>
+</tr>
+</table>
+<br>
+<table width=240>
+<tr>
+<td>QuickBox:</td>
+<td><edit var="qbox" width=120 height=15></td>
+<td><button value="Help" action="bypass -h admin_help help/main_menu.htm" width=45 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+</table>
+<br>
 <table width=240><tr>
 <td><button value="Item" action="bypass -h admin_create_item $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Teleport" action="bypass -h admin_move_to $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
