--- a/trunk/datapack_development/data/html/admin/transform.htm
+++ b/trunk/datapack_development/data/html/admin/transform.htm
@@ -1,60 +1,78 @@
 <html><title>Transformation</title><body>
-<table width=260><tr>
-<td width=40><button value="Main" action="bypass -h admin_admin" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td width=180><center>Transform Menu</center></td>
-<td width=40><button value="Back" action="bypass -h admin_admin3" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Page2" action="bypass -h admin_help transform2.htm" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr></table><br>
 <center>
-<table width=260><tr>
-<td>Values:</td><td><edit var="qbox" width=110 height=15></td>
-<td><button value="Send" action="bypass -h admin_transform_menu $qbox" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Help" action="bypass -h admin_help help/transform.htm" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr></table><br>
-<table width=260><tr>
-<td><button value="Akamanah" action="bypass -h admin_transform_menu 302 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Zariche" action="bypass -h admin_transform_menu 301 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Buffalo" action="bypass -h admin_transform_menu 103 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="DoomWrth" action="bypass -h admin_transform_menu 2 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr><tr>
-<td><button value="Kamael" action="bypass -h admin_transform_menu 251 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Native" action="bypass -h admin_transform_menu 101 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="OnyxBst" action="bypass -h admin_transform_menu 1 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Pig" action="bypass -h admin_transform_menu 104 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-</tr><tr>
-<td><button value="Pixy" action="bypass -h admin_transform_menu 304 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Rabbit" action="bypass -h admin_transform_menu 105 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Yeti" action="bypass -h admin_transform_menu 102 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Zombie" action="bypass -h admin_transform_menu 303 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<table width=270 border=0 bgcolor="666666">
+<tr>
+<td><button value="Main" action="bypass -h admin_admin" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Game" action="bypass -h admin_admin2" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Effects" action="bypass -h admin_admin3" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Server" action="bypass -h admin_admin4" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Mods" action="bypass -h admin_admin5" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
-</table><br> 
-<table width=260><tr> 
-<td>Normal:</td> 
-<td>Strong:</td> 
-<td>Weak:</td> 
-</tr><tr> 
-<td><button value="DragonBm" action="bypass -h admin_transform_menu 217 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-<td><button value="DragonBm" action="bypass -h admin_transform_menu 216 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-<td><button value="DragonBm" action="bypass -h admin_transform_menu 218 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-</tr><tr> 
-<td><button value="GolmGuard" action="bypass -h admin_transform_menu 211 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-<td><button value="GolmGuard" action="bypass -h admin_transform_menu 210 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-<td><button value="GolmGuard" action="bypass -h admin_transform_menu 212 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-</tr><tr> 
-<td><button value="GrailApos" action="bypass -h admin_transform_menu 202 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-<td><button value="GrailApos" action="bypass -h admin_transform_menu 201 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-<td><button value="GrailApos" action="bypass -h admin_transform_menu 203 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-</tr><tr> 
-<td><button value="InfernDrk" action="bypass -h admin_transform_menu 214 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-<td><button value="InfernDrk" action="bypass -h admin_transform_menu 213 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-<td><button value="InfernDrk" action="bypass -h admin_transform_menu 215 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-</tr><tr> 
-<td><button value="LilimKni" action="bypass -h admin_transform_menu 208 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-<td><button value="LilimKni" action="bypass -h admin_transform_menu 207 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-<td><button value="LilimKni" action="bypass -h admin_transform_menu 209 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-</tr><tr> 
-<td><button value="Unicorn" action="bypass -h admin_transform_menu 205 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-<td><button value="Unicorn" action="bypass -h admin_transform_menu 204 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-<td><button value="Unicorn" action="bypass -h admin_transform_menu 206 $qbox" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td> 
-</tr> 
-</table></body></html>
+</table>
+<br>
+<table width=270>
+<tr>
+<td>Values:</td>
+<td><edit var="qbox" width=100 height=15></td>
+<td><button value="Send" action="bypass -h admin_transform_menu $qbox" width=40 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Help" action="bypass -h admin_help help/transform.htm" width=40 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+</table>
+<br>
+Divine Transformations:
+<table width=260>
+<tr>
+<td><button value="Enchant" action="bypass -h admin_transform_menu 257 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Healer" action="bypass -h admin_transform_menu 255 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Knight" action="bypass -h admin_transform_menu 252 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Rogue" action="bypass -h admin_transform_menu 254 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td><button value="Summon" action="bypass -h admin_transform_menu 258 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Warrior" action="bypass -h admin_transform_menu 253 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Wizard" action="bypass -h admin_transform_menu 256 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+</table>
+<br> 
+Boss Transformations:
+<table width=260>
+<tr>
+<td><button value="Anakim" action="bypass -h admin_transform_menu 306 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Benom" action="bypass -h admin_transform_menu 307 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="D Prince" action="bypass -h admin_transform_menu 311 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Zaken" action="bypass -h admin_transform_menu 305 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td><button value="Ranku" action="bypass -h admin_transform_menu 309 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Kiyachi" action="bypass -h admin_transform_menu 310 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Gordon" action="bypass -h admin_transform_menu 308 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+</table>
+<br> 
+Character Transformations:
+<table width=260>
+<tr>
+<td><button value="Akamanah" action="bypass -h admin_transform_menu 302 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Zariche" action="bypass -h admin_transform_menu 301 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Kamael" action="bypass -h admin_transform_menu 251 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Native" action="bypass -h admin_transform_menu 101 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td><button value="Golem" action="bypass -h admin_transform_menu 259 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="WLK Fuse" action="bypass -h admin_transform_menu 219 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="ES Fuse" action="bypass -h admin_transform_menu 220 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="PS Fuse" action="bypass -h admin_transform_menu 221 $qbox" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+</table>
+<br><br>
+Other Transformation Pages:
+<table width=260>
+<tr>
+<td><button value="Page :1:" action="bypass -h admin_help transform.htm" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Page :2:" action="bypass -h admin_help transform2.htm" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Page :3:" action="bypass -h admin_help transform3.htm" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Page :4:" action="bypass -h admin_help transform4.htm" width=60 height=20 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+</table>
+</center>
+</body></html>
