--- a/trunk/datapack_development/data/html/olympiad/noble_desc2d.htm
+++ b/trunk/datapack_development/data/html/olympiad/noble_desc2d.htm
@@ -1,6 +1,5 @@
-<html><body>Grand Olympiad Manager:<br>
+<html><body>Grand Olympiad Operator:<br>
 If you really want to test your true strength, you need the skill and courage to defeat other classes. Only the best deserve to be heroes.<br>
-<a action="bypass -h npc_%objectId%_OlympiadDesc 2d" msg="1481">Join a class-irrelevant team match.</a><br>
-<a action="bypass -h npc_%objectId%_OlympiadDesc 2a">Back</a>
-<br> 
+<a action="bypass -h npc_%objectId%_OlympiadNoble 4" msg="1481">Join a class irrelevant individual match.</a><br>
+<a action="bypass -h npc_%objectId%_OlympiadDesc 0">Back</a>
 </body></html>
