--- a/trunk/datapack_development/data/html/default/32615.htm
+++ b/trunk/datapack_development/data/html/default/32615.htm
@@ -3,9 +3,9 @@ The Merchants of Mammon are mistaken. We must adjust to the world, not the other
 The boats to and from Gracia? Not many in the Black Anvil Guild can work with the items coming from Gracia. Even if they could, most don't have time to learn. But it's a different story for the Merchants of Mammon.<br>
 Fortunately, I have the skills and the time. What can I do for you?<br>
 <a action="bypass -h npc_%objectId%_multisell 326150001">Craft a dualsword.</a><br>
-<a action="bypass -h npc_%objectId%_Chat 0">Bestow special features on a weapon.</a><br>
-<a action="bypass -h npc_%objectId%_Chat 0">Remove a weapon's special capability.</a><br>
-<a action="bypass -h npc_%objectId%_Chat 0">Release seal on armor.</a><br>
-<a action="bypass -h npc_%objectId%_Chat 0">Release seal on an accessory.</a><br>
-<a action="bypass -h npc_%objectId%_Chat 0">Upgrade Vesper armor.</a><br>
+<a action="bypass -h npc_%objectId%_exc_multisell 326150002">Bestow special features on a weapon.</a><br>
+<a action="bypass -h npc_%objectId%_exc_multisell 326150003">Remove a weapon's special capability.</a><br>
+<a action="bypass -h npc_%objectId%_exc_multisell 326150004">Release seal on armor.</a><br>
+<a action="bypass -h npc_%objectId%_exc_multisell 326150005">Release seal on an accessory.</a><br>
+<a action="bypass -h npc_%objectId%_exc_multisell 326150006">Upgrade Vesper armor.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a></body></html>
