--- a/trunk/datapack_development/data/html/merchant/31339.htm
+++ b/trunk/datapack_development/data/html/merchant/31339.htm
@@ -1,8 +1,6 @@
-<html><body>
-Amulet Seller Hakran:<br>
-Frankly, when I first came here, I was shocked! The silly humans have such terrible memories, they have to write everything down! But I must admin, the size of their library was astonishing!<br>
-Young orcs could learn a lot there... No doubt, children are precious, but that's all the more reason we should raise them to be fearless and strong<br>
-<a action="bypass -h npc_%objectId%_Buy 3133900">Buy</a><br>
+<html><body>Amulet Seller Hakran:<br>
+To be honest, I was surprised when I first arrived here. I think the Humans only wrote this much down due to the fact that their memories are so bad! Still, I must admit that I admire their dedication to preserving such a huge amount of lore.<br>
+Our young Orcs could learn a great deal from traveling throughout this world. Strength and speed are not always sufficient in these dark days... <br><a action="bypass -h npc_%objectId%_Buy 3133900">Buy</a><br>
 <a action="bypass -h npc_%objectId%_Sell">Sell</a><br>
 <a action="bypass -h npc_%objectId%_TerritoryStatus">Manor tax rate and information</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest</a>
