--- a/trunk/datapack_development/data/html/olympiad/noble_main.htm
+++ b/trunk/datapack_development/data/html/olympiad/noble_main.htm
@@ -1,5 +1,5 @@
-<html><body>Grand Olympiad Manager :<br><br>
-You are a Noblesse. Walk the path of Heroes of the Grand Olympiad. You are born with such a destiny.<br><br>
+<html><body>Grand Olympiad Manager :<br>
+You are a Noblesse. Walk the path of Heroes of the Grand Olympiad. You are born with such a destiny.<br>
 <a action="bypass -h npc_%objectId%_OlympiadDesc 1a">"Tell me more about the Grand Olympiad."</a><br>
 <a action="bypass -h npc_%objectId%_OlympiadDesc 2a">"I want to participate in the Grand Olympiad."</a><br>
 <a action="bypass -h npc_%objectId%_OlympiadNoble 1" msg="1480">"I want to cancel the participation in the Grand Olympiad."</a><br>
