DP part for [L3494] by Charus

--- a/trunk/datapack_development/data/html/villagemaster/SubClass.htm
+++ b/trunk/datapack_development/data/html/villagemaster/SubClass.htm
@@ -2,4 +2,5 @@
 <a action="bypass -h npc_%objectId%_Subclass 1">Add subclass.</a><br>
 <a action="bypass -h npc_%objectId%_Subclass 2">Change subclass.</a><br>
 <a action="bypass -h npc_%objectId%_Subclass 3">Cancel current subclass and change to a new subclass.</a><br>
-<a action="bypass -h npc_%objectId%_Link villagemaster/subclass_comp_01.htm">Subclass skill certification.</a></body></html></body></html>
+<a action="bypass -h npc_%objectId%_Link villagemaster/subclass_comp_01.htm">Subclass skill certification.</a>
+</body></html>
