--- a/trunk/datapack_development/data/scripts/quests/136_MoreThanMeetsTheEye/32323-00.htm
+++ b/trunk/datapack_development/data/scripts/quests/136_MoreThanMeetsTheEye/32323-00.htm
@@ -5,5 +5,6 @@ If you aquire them for me from the den of th Wizard of Darkness, perhaps I can p
 <a action="bypass -h npc_%objectId%_Chat 1">Ask about transformation.</a><br>
 <a action="bypass -h npc_%objectId%_TransformSkillList">Learn Transformation.</a><br>
 <a action="bypass -h npc_%objectId%_multisell 32323001">Buy items related to transformation.</a><br>
+<a action="bypass -h npc_%objectId%_Quest 8005_SubClassSkills">Learn about subclass certification.</a><br>
 <a action="bypass -h npc_%objectId%_Quest">Quest.</a>
 </body></html>
