- Warehouse Freight fix, thanks _DS_
- Set Fame button added to game menu (this sets fame to the given value, not add! 50000 max.)

--- a/trunk/datapack_development/data/html/admin/teleports/raid/raid_special.htm
+++ b/trunk/datapack_development/data/html/admin/teleports/raid/raid_special.htm
@@ -39,6 +39,9 @@
 <td align=center><button action="bypass -h admin_move_to 213896 -115436 -1644" value="Valakas (85)" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td align=center><button action="bypass -h admin_move_to 174238 -89532 -5192" value="Frintezza (90)" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
+<tr>
+<td align=center><button action="bypass -h admin_move_to 20886 244088 11088" value="Darion (87)" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
 </table>
 </center>
 </body></html>
