--- a/trunk/datapack_development/data/html/castlemagician/magician.htm
+++ b/trunk/datapack_development/data/html/castlemagician/magician.htm
@@ -1,13 +1,14 @@
-<html><body>%npcname%:<br>
-To better rule your territory, review the findings of this research conducted by Mystics Guild.<br> 
-Beyond the Magic Field used to teleport clan members through a crown and the Talisman, a magical crystal, magic can also be used to provide special abilities on your low-ranking soldiers.<br><br> 
-We have also purchased several key items from the elves' mystical merchant.<br> 
+<html><body>Court Magician:<br>
+Cast your eyes upon the results of this magical research conducted by the Mystics Guild.<br>
+You can make use of a magical field capable of teleporting a clan member through a crown, as well as magic that provides special abilities to you low-ranking soldiers. We even have a Talisman, a magical crystal filled with power.<br>
+We have also purchased certain items directly from the Elves' mystical merchant. How may I serve you?<br>
 <center>
 <a action="bypass -h npc_%objectId%_gotoleader">Move through the magic field.</a><br>
-<a action="bypass -h npc_%objectId%_multisell 356551001">Purchase magic-related products.</a><br>
-<a action="bypass -h npc_%objectId%_multisell 356551002">Apply magic to Bracelet.</a><br>
-<a action="bypass -h npc_%objectId%_multisell 356551003">Apply magic to T-shirt</a><br>
-<a action="bypass -h npc_%objectId%_Chat 1">Gain Talisman</a><br>
-<a action="bypass -h npc_%objectId%_Chat 0">Learn special skills for low-ranking soldiers.</a>
+<a action="bypass -h npc_%objectId%_multisell 356551001">Purchase Elven items.</a><br>
+<a action="bypass -h npc_%objectId%_multisell 356551002">Purchase Bracelet.</a><br>
+<a action="bypass -h npc_%objectId%_multisell 356551003">Purchase Shirt</a><br>
+<a action="bypass -h npc_%objectId%_Chat 0">Trade Shirt for Enchanted Shirt.</a><br>
+<a action="bypass -h npc_%objectId%_Talisman">Obtain Talisman.</a><br>
+<a action="bypass -h npc_%objectId%_Chat 0">Learn special skills for low-ranked soldiers.</a>
 </center>
 </body></html>
