not necessary, thanks JIV

--- a/trunk/datapack_development/data/html/castlemagician/magician.htm
+++ b/trunk/datapack_development/data/html/castlemagician/magician.htm
@@ -8,7 +8,7 @@ We have also purchased certain items directly from the Elves' mystical merchant.
 <a action="bypass -h npc_%objectId%_multisell 356551002">Purchase Bracelet.</a><br>
 <a action="bypass -h npc_%objectId%_multisell 356551003">Purchase Shirt</a><br>
 <a action="bypass -h npc_%objectId%_Chat 0">Trade Shirt for Enchanted Shirt.</a><br>
-<a action="bypass -h npc_%objectId%_Talisman">Obtain Talisman.</a><br>
+<a action="bypass -h npc_%objectId%_Chat 1">Obtain Talisman.</a><br>
 <a action="bypass -h npc_%objectId%_Chat 0">Learn special skills for low-ranked soldiers.</a>
 </center>
 </body></html>
