DP for Fort Support Unit Captain Talisman support [L3533], thanks JIV Enchant Menu Expanded [http://img30.imageshack.us/img30/6084/enhance.jpg] (added attribute enhancement buttons and a preset for each slot)

--- a/trunk/datapack_development/data/html/admin/main_menu.htm
+++ b/trunk/datapack_development/data/html/admin/main_menu.htm
@@ -66,7 +66,7 @@
 </tr><tr>
 <td><button value="Wyvern" action="bypass -h admin_ride_wyvern" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="Strider" action="bypass -h admin_ride_strider" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Enchant" action="bypass -h admin_enchant" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td><button value="Enhance" action="bypass -h admin_enchant" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 <td><button value="GM Shop" action="bypass -h admin_gmshop" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr><tr>
 <td><button value="Instance" action="bypass -h admin_help instancezone.htm" width=55 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
