--- a/trunk/datapack_development/data/html/admin/enchant.htm
+++ b/trunk/datapack_development/data/html/admin/enchant.htm
@@ -1,32 +1,103 @@
-<html><title>Enchant</title><body>
-<table width=260><tr>
-<td width=40><button value="Main" action="bypass -h admin_admin" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td width=180><center>Item Enchant Menu</center></td>
-<td width=40><button value="Back" action="bypass -h admin_admin" width=40 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr></table><br>
+<html><title>Enchant & Attribute Menu</title><body>
 <center>
-<table width=240><tr>
-<td>Enchant 0-65535:</td><td><edit var="qbox" width=120 height=15></td>
-<td><button value="Help" action="bypass -h admin_help help/enchant.htm" width=45 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr></table><br>
-<table width=260><tr>
-<td><button value="Underwear" action="bypass -h admin_setun $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Helmet" action="bypass -h admin_seteh $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Cloak" action="bypass -h admin_setba $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Mask" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Necklace" action="bypass -h admin_seten $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr><tr>
-<td><button value="Weapon" action="bypass -h admin_setew $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Chest" action="bypass -h admin_setec $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Shield" action="bypass -h admin_setes $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Earring" action="bypass -h admin_setre $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Earring" action="bypass -h admin_setle $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr><tr>
-<td><button value="Gloves" action="bypass -h admin_seteg $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Leggings" action="bypass -h admin_setel $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Boots" action="bypass -h admin_seteb $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Ring" action="bypass -h admin_setrf $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td><button value="Ring" action="bypass -h admin_setlf $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr><tr>
-<td><button value="Belt" action="bypass -h admin_setbe $qbox" width=50 height=15 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td></tr>
-</table></body></html>
+<table width=270 border=0 bgcolor="666666">
+<tr>
+<td><button value="Main" action="bypass -h admin_admin" width=50 height=15 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Game" action="bypass -h admin_admin2" width=50 height=15 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Effects" action="bypass -h admin_admin3" width=50 height=15 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Server" action="bypass -h admin_admin4" width=50 height=15 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Mods" action="bypass -h admin_admin5" width=50 height=15 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+</tr>
+</table>
+<br>
+<font color="LEVEL">Enchant Enhancement:</font><br>
+<table width=250>
+<tr>
+<td>Enchant Value 0-65535:</td>
+<td><edit var="qbox" width=80 height=15></td>
+</tr>
+</table>
+<br>
+<table width=260>
+<tr>
+<td><button value="+6" action="bypass -h admin_seteh 6" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Helmet" action="bypass -h admin_seteh $qbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Upper Earring" action="bypass -h admin_setle $qbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="+4" action="bypass -h admin_setle 4" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td><button value="+6" action="bypass -h admin_setec 6" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Chest" action="bypass -h admin_setec $qbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Lower Earring" action="bypass -h admin_setre $qbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="+4" action="bypass -h admin_setre 4" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td><button value="+6" action="bypass -h admin_setel 6" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Leggings" action="bypass -h admin_setel $qbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Necklace" action="bypass -h admin_seten $qbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="+4" action="bypass -h admin_seten 4" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td><button value="+6" action="bypass -h admin_seteg 6" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Gloves" action="bypass -h admin_seteg $qbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Upper Ring" action="bypass -h admin_setlf $qbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="+4" action="bypass -h admin_setlf 4" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td><button value="+6" action="bypass -h admin_seteb 6" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Boots" action="bypass -h admin_seteb $qbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Lower Ring" action="bypass -h admin_setrf $qbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="+4" action="bypass -h admin_setrf 4" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td><button value="+4" action="bypass -h admin_setba 4" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Cloak" action="bypass -h admin_setba $qbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td><button value="+4" action="bypass -h admin_setun 4" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Shirt" action="bypass -h admin_setun $qbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Belt" action="bypass -h admin_setbe $qbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="+4" action="bypass -h admin_setbe 4" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td><button value="+4" action="bypass -h admin_setew 4" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Weapon" action="bypass -h admin_setew $qbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Shield / Sigil" action="bypass -h admin_setes $qbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="+4" action="bypass -h admin_setes 4" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+</tr>
+</table>
+<br><br>
+<font color="LEVEL">Attribute Enhancement:</font><br>
+<table width=250>
+<tr>
+<td>Element Type (e.g. Dark):</td>
+<td><edit var="ebox" width=80 height=15></td>
+</tr>
+<tr>
+<td>Element Value 0-450:</td>
+<td><edit var="vbox" width=80 height=15></td>
+</tr>
+</table>
+<br>
+<table width=260>
+<tr>
+<td><button value="60" action="bypass -h admin_setlh $ebox 60" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Helmet" action="bypass -h admin_setlh $ebox $vbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Gloves" action="bypass -h admin_setlg $ebox $vbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="60" action="bypass -h admin_setlg $ebox 60" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td><button value="60" action="bypass -h admin_setlc $ebox 60" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Chest" action="bypass -h admin_setlc $ebox $vbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Boots" action="bypass -h admin_setlb $ebox $vbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="60" action="bypass -h admin_setlb $ebox 60" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td><button value="60" action="bypass -h admin_setll $ebox 60" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Leggings" action="bypass -h admin_setll $ebox $vbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="Weapon" action="bypass -h admin_setlw $ebox $vbox" width=85 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+<td><button value="150" action="bypass -h admin_setlw $ebox 150" width=35 height=20 back="L2UI_ct1.button_df_down" fore="L2UI_ct1.button_df"></td>
+</tr>
+</table>
+</center>
+</body></html>
