--- a/trunk/datapack_development/data/html/fortress/supportunit-noepau.htm
+++ b/trunk/datapack_development/data/html/fortress/supportunit-noepau.htm
@@ -1,6 +1,4 @@
-<html><body>You do not have enough Knight's Epaulettes.<br>
- <br>
-<a action="bypass -h npc_%objectId%_Chat 0">Back.</a><br>
- <br>
-
+<html><body>
+You do not have enough Knight's Epaulettes.<br><br>
+<a action="bypass -h npc_%objectId%_Chat 0">Back.</a>
 </body></html>
