--- a/trunk/datapack_development/data/html/admin/help/gmcommands.htm
+++ b/trunk/datapack_development/data/html/admin/help/gmcommands.htm
@@ -5,7 +5,7 @@
 <font color="FF0000">These are the available GM commands in game.</font><br><br>
 <font color="LEVEL">//admin</font> - Brings up the admin menu.<br>
 <font color="LEVEL">//gmchat</font> - Sends a global message that only GMs can see.<br><font color="FF9933">Ussage - //gmchat Type message here</font><br>
-<font color="LEVEL">//gm</font> - Turns on or off your GM status.<br>
+<font color="LEVEL">//gm</font> - Turns off your GM status and sets accesslevel to 0.<br>
 <font color="LEVEL">//invul</font> - Turns your invulnerability on or off.<br>
 <font color="LEVEL">//delete</font> - Used to remove a targetted Mob. Mob will not respawn.<br>
 <font color="LEVEL">//kill</font> - Used to kill a targetted Mob. Mob will respawn.<br>
