--- a/trunk/datapack_development/data/html/admin/teleports/instance.htm
+++ b/trunk/datapack_development/data/html/admin/teleports/instance.htm
@@ -12,7 +12,7 @@
 <center>
 <button action="bypass -h admin_help teleports/instance/destruction.htm" value="Seed of Destruction" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 <button action="bypass -h admin_help teleports/instance/infinity.htm" value="Seed of Infinity" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
-<button action="bypass -h admin_help teleports/instance/kamaloka.htm" value="Kamaloka Guards" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_help teleports/instance/kamaloka.htm" value="Kamaloka" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 <button action="bypass -h admin_help teleports/instance/darkcloudmansion.htm" value="Darkcloud Mansion" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 <button action="bypass -h admin_help teleports/instance/crystalcaverns.htm" value="Crystal Caverns" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 <button action="bypass -h admin_help teleports/instance/nornilsgarden.htm" value="Nornils Garden" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
@@ -20,5 +20,6 @@
 <button action="bypass -h admin_help teleports/instance/naia.htm" value="Tower of Naia" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 <button action="bypass -h admin_help teleports/instance/tully.htm" value="Tully's Workshop" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 <button action="bypass -h admin_move_to 53322 246380 -6580" value="Underground Camp" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
+<button action="bypass -h admin_move_to 48264 -12239 -9128" value="Rim Pailaka, Rune" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"><br1>
 </center>
 </body></html>
