--- a/trunk/datapack_development/data/html/admin/teleports/instance/kamaloka.htm
+++ b/trunk/datapack_development/data/html/admin/teleports/instance/kamaloka.htm
@@ -34,6 +34,14 @@
 <tr>
 <td align=center><button action="bypass -h admin_move_to 42660 -47996 -727" value="Kamaloka 73" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
+<tr>
+<td align=center><button action="bypass -h admin_move_to -76435 -185543 -11008" value="Hall of Abyss 1" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_move_to -76435 -174918 -11008" value="Hall of Abyss 2" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td align=center><button action="bypass -h admin_move_to -10872 -185543 -10946" value="Hall of Abyss 3" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_move_to -10872 -174918 -10946" value="Hall of Abyss 4" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
 </table>
 </center>
 </body></html>
