--- a/trunk/datapack_development/data/html/admin/teleports/others.htm
+++ b/trunk/datapack_development/data/html/admin/teleports/others.htm
@@ -16,6 +16,10 @@
 <td align=center><button action="bypass -h admin_move_to -56748 -56344 -2008" value="Fantasy Show" width=110 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 <tr>
+<td align=center><button action="bypass -h admin_move_to -87029 -16399 -8325" value="Kratei's Cube 1" width=110 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_move_to -86966 -81809 -8357" value="Kratei's Cube 2" width=110 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
 <td align=center><button action="bypass -h admin_move_to -114462 -249619 -2986" value="Jail" width=110 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
 </tr>
 </table>
