Gigiikun: IOP race update.

--- a/trunk/datapack_development/data/html/default/32349-1.htm
+++ b/trunk/datapack_development/data/html/default/32349-1.htm
@@ -1,11 +1,5 @@
-<html><body>Ringos:<br>
-Rules of Grand Isle of Prayer Race:<br>
-1) You have only <font color="LEVEL">30 Minutes</font> to complete the race.<br>
-2) You need to surround the whole island and to find <font color="LEVEL">Secret Houses</font>.<br>
-3) Hit the monsters without a weapon inside the house until you receive <font color="LEVEL">Race Stamps</font>.<br>
-4) Once you find all 4 houses and you obtained <font color="LEVEL">4 Race Stamps</font>, I exchange them for <font color="LEVEL">3 Secret Keys</font>.<br>
-5) You may not <font color="LEVEL">get out</font> from the game during a race, you will have to start all over again.<br>
-6) If you cheat during the race, <font color="LEVEL">your results will be canceled</font>.<br>
-<a action="bypass -h npc_%objectId%_Chat 0">Back.</a><br>
-</body>
-</html>
+<html><body>Rignos:<br>
+You have 30 minutes to find three other structures just like the one behind me. They are scattered around the island. Once you find them, go inside and battle the opponents you find there. One of these combatants will drop a Race Stamp. Bring 4 Race Stamps to me within the allotted time, and I will give you a reward that will aid you in your endeavor to rescue Parme.<br>
+Don't forget to include the building behind me!<br>
+<a action="bypass -h npc_%objectId%_Quest IOPRace">I'm ready! Let's start the race.</a>
+</body></html>
