Patch contains: - DP support for [L3618] - Crystal Cavern script - 3 New Quests Thx for everyone who worked on it!

--- a/trunk/datapack_development/data/html/default/32281.htm
+++ b/trunk/datapack_development/data/html/default/32281.htm
@@ -4,6 +4,6 @@ Welcome. I am the first child of the Oracle. My mistress ia <font color="LEVEL">
 My mission is to safely escort you to her current location.<br>
 Unfortunately, that place is unreachable without proper preparation.<br>
 If you are ready, please give me your hand, and I shall open the way.<br>
-<a action="bypass -h npc_%objectId%_Chat 0">Ask what you need to prepare.</a><br>
-<a action="bypass -h npc_%objectId%_Chat 0">Touch the sphere.</a>
+<a action="bypass -h npc_%objectId%_Chat 1">Ask what you need to prepare.</a><br>
+<a action="bypass -h npc_%objectId%_Quest CrystalCaverns">Touch the sphere.</a>
 </body></html>
