Admin Teleport Update, thanks Probe
Crystal Cave:
- Parme Fix
- Alarm Stat Fix
- HTML Fix

--- a/trunk/datapack_development/data/html/admin/teleports/instance/infi.htm
+++ b/trunk/datapack_development/data/html/admin/teleports/instance/infi.htm
@@ -10,10 +10,27 @@
 <br>
 <br>
 <center>
-<button action="bypass -h admin_move_to -12650 274045 -15301" value="Tower of Infinitum 1" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<button action="bypass -h admin_move_to -12186 274053 -13596" value="Tower of Infinitum 2" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<button action="bypass -h admin_move_to -12429 273921 -11623" value="Tower of Infinitum 3" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<button action="bypass -h admin_move_to -12868 273785 -10496" value="Tower of Infinitum 4" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<button action="bypass -h admin_move_to -12537 273938 -9013" value="Tower of Infinitum 5" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<table width=270>
+<tr>
+<td align=center><button action="bypass -h admin_move_to -22195 278232 -15045" value="Tower of Infinitum 1" width=135 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_move_to -22195 278232 -12934" value="Tower of Infinitum 2" width=135 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td align=center><button action="bypass -h admin_move_to -22195 278232 -11429" value="Tower of Infinitum 3" width=135 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_move_to -22195 278232 -9924" value="Tower of Infinitum 4" width=135 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td align=center><button action="bypass -h admin_move_to -22195 278232 -7879" value="Tower of Infinitum 5" width=135 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_move_to -19032 279176 -15045" value="Tower of Infinitum 6" width=135 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td align=center><button action="bypass -h admin_move_to -19004 278589 -13381" value="Tower of Infinitum 7" width=135 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_move_to -19004 278589 -11566" value="Tower of Infinitum 8" width=135 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+<tr>
+<td align=center><button action="bypass -h admin_move_to -19013 278621 -9925" value="Tower of Infinitum 9" width=135 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+<td align=center><button action="bypass -h admin_move_to -19013 278621 -8215" value="Tower of Infinitum 10" width=135 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
+</tr>
+</table>
 </center>
 </body></html>
