--- a/trunk/datapack_development/data/html/admin/teleports/instance/tully.htm
+++ b/trunk/datapack_development/data/html/admin/teleports/instance/tully.htm
@@ -10,27 +10,14 @@
 <br>
 <br>
 <center>
-<table width=256>
-<tr>
-<td align=center><button action="bypass -h admin_move_to -19032 279176 -15045" value="Tully's Workshop 1" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td align=center><button action="bypass -h admin_move_to -19004 278589 -13381" value="Tully's Workshop 2" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr>
-<tr>
-<td align=center><button action="bypass -h admin_move_to -19004 278589 -11566" value="Tully's Workshop 3" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td align=center><button action="bypass -h admin_move_to -19013 278621 -9925" value="Tully's Workshop 4" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr>
-<tr>
-<td align=center><button action="bypass -h admin_move_to -19013 278621 -8215" value="Tully's Workshop 5" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td align=center><button action="bypass -h admin_move_to -22195 278232 -15045" value="Tully's Workshop 6" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr>
-<tr>
-<td align=center><button action="bypass -h admin_move_to -22195 278232 -12934" value="Tully's Workshop 7" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td align=center><button action="bypass -h admin_move_to -22195 278232 -11429" value="Tully's Workshop 8" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr>
-<tr>
-<td align=center><button action="bypass -h admin_move_to -22195 278232 -9924" value="Tully's Workshop 9" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-<td align=center><button action="bypass -h admin_move_to -22195 278232 -7879" value="Tully's Workshop 10" width=120 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df"></td>
-</tr>
-</table>
+<button action="bypass -h admin_move_to -12650 274045 -15301" value="Tully's Workshop 1" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df">
+<button action="bypass -h admin_move_to -12186 274053 -13596" value="Tully's Workshop 2" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df">
+<button action="bypass -h admin_move_to -12429 273921 -11623" value="Tully's Workshop 3" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df">
+<button action="bypass -h admin_move_to -12868 273785 -10496" value="Tully's Workshop 4" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df">
+<button action="bypass -h admin_move_to -12537 273938 -9013" value="Tully's Workshop 5" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df">
+<button action="bypass -h admin_move_to -12220 279713 -13595" value="Tully's Workshop 6" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df">
+<button action="bypass -h admin_move_to -12526 279714 -11623" value="Tully's Workshop 7" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df">
+<button action="bypass -h admin_move_to -12220 279713 -10496" value="Tully's Workshop 8" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df">
+<button action="bypass -h admin_move_to 21928 243924 11088" value="Tully's Workshop Roof" width=150 height=21 back="L2UI_ct1.button_df" fore="L2UI_ct1.button_df">
 </center>
 </body></html>
